--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <header></header>
     <meta charset="UTF-8">
     <title>John Lieb</title>
+    <body>
+        <h1>John Lieb</h1>
+    </body>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
