Updated website with questions from web dev

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <title>John Lieb</title>
     <body>
         <h1>John Lieb</h1>
+        <h2>Computer Science May 2026</h2>
+        <div>
+            <h3>Favorite Places on Campus</h3>
+            <ul>
+                <li>Neville Arena</li>
+                <li>Jordan Harde Stadium</li>
+                <li>Brown-Kopel Engineering Center</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Things I Want to Learn in Web Development</h3>
+            <u1>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </u1>
+        </div>
+        <footer>
+            <p>&copy; 2024 John Lieb</p>
+        </footer>
     </body>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
 </html>
